header button fix

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h1 class="text-3xl font-bold">MPR Consultancy Agency</h1>
             <nav>
                 <ul class="flex space-x-6">
+                    <li><a href="index.html" class="hover:text-gray-300">Home</a></li>
                     <li><a href="about.html" class="hover:text-gray-300">About Us</a></li>
                     <li><a href="driving-force.html" class="hover:text-gray-300">Driving Force</a></li>
                     <li><a href="work.html" class="hover:text-gray-300">Work</a></li>
