--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
                     <li><a href="impact.html" class="hover:text-gray-300">Impact</a></li>
                     <li><a href="media.html" class="hover:text-gray-300">Media</a></li>
                     <li><a href="join-us.html" class="hover:text-gray-300">Join Us</a></li>
+                    <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
                 </ul>
             </nav>
         </div>
