--- a/driving-force.html
+++ b/driving-force.html
@@ -15,6 +15,7 @@
                 <ul class="flex space-x-6">
                     <li><a href="index.html" class="hover:text-gray-300">Home</a></li>
                     <li><a href="about.html" class="hover:text-gray-300">About Us</a></li>
+                    <li><a href="driving-force.html" class="hover:text-gray-300">Driving Force</a></li>
                     <li><a href="work.html" class="hover:text-gray-300">Work</a></li>
                     <li><a href="impact.html" class="hover:text-gray-300">Impact</a></li>
                     <li><a href="media.html" class="hover:text-gray-300">Media</a></li>
