--- a/impact.html
+++ b/impact.html
@@ -17,6 +17,7 @@
                     <li><a href="about.html" class="hover:text-gray-300">About Us</a></li>
                     <li><a href="driving-force.html" class="hover:text-gray-300">Driving Force</a></li>
                     <li><a href="work.html" class="hover:text-gray-300">Work</a></li>
+                    <li><a href="impact.html" class="hover:text-gray-300">Impact</a></li>
                     <li><a href="media.html" class="hover:text-gray-300">Media</a></li>
                     <li><a href="join-us.html" class="hover:text-gray-300">Join Us</a></li>
                     <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
