--- a/join-us.html
+++ b/join-us.html
@@ -19,6 +19,7 @@
                     <li><a href="work.html" class="hover:text-gray-300">Work</a></li>
                     <li><a href="impact.html" class="hover:text-gray-300">Impact</a></li>
                     <li><a href="media.html" class="hover:text-gray-300">Media</a></li>
+                    <li><a href="join-us.html" class="hover:text-gray-300">Join Us</a></li>
                     <li><a href="contact.html" class="hover:text-gray-300">Contact</a></li>
                 </ul>
             </nav>
